On recent versions of mainstream GNU/Linux distributions, "python"
either does not exist or it points to Python 3.  These user options now
default to using "python", falling back to "python3" if it does not
exist.  If "python" points to Python 2 on your system, you now have to
customize these variables to "python3" if you want to use Python 3
instead.

---
*** Support of 'electric-layout-mode' added.

** Tmm Menubar

---
*** A new shortcut to navigate to previous menu.
The hardcoded '^' shortcut gets you back to the previous menu.

---
*** New user option 'tmm-shortcut-inside-entry'.
When non-nil, highlight the character shortcut in the menu entry's
string instead of preprending it and 'tmm-mid-prompt' to said entry.

** Foldout

---
*** New command 'foldout-widen-to-current-fold'.
This command widens the view to the current fold level when in a fold,
or behaves like 'widen' if not in a fold.

** MPC

---
*** New user option 'mpc-notifications'.
When non-nil, MPC (the Emacs front-end to Music Player Daemon) displays
a desktop notification when the song changes, using
'notifications-notify'.  The notification's title and body can be
customized using the new user options 'mpc-notifications-title' and
'mpc-notifications-body'.

---
*** New user option 'mpc-crossfade-time'.
When non-nil, MPC will crossfade between songs for the specified number
of seconds.  Crossfading can be toggled using the command
'mpc-toggle-crossfade' or from the MPC menu.

---
*** New command 'mpc-describe-song'.
This command displays information about the currently playing song or
song at point in the "*MPC-Songs*" buffer.  The list of tags to display
can be customized using the new user option 'mpc-song-viewer-tags' and
the appearance of the list with the new faces 'mpc-song-viewer-tag',
'mpc-song-viewer-value', and 'mpc-song-viewer-empty'.

** VC

---
*** Using 'e' from Log View mode to modify change comments now works for Git.

---
*** New user option 'vc-allow-rewriting-published-history'.